--- a/index.html
+++ b/index.html
@@ -7,34 +7,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container">
-    <h1 class="title">Calculator</h1>
-    <div class="calculator">
-        <div class="display" id="display">3.14159265</div>
-        <button class="clear"></button>
-        <!-- <button class = operator>+/-</button> -->
-        <button class = operator>AC</button>
-        <button class="operator">÷</button>
+    <div class="container">
+        <h1 class="title">Calculator</h1>
+        <div class="calculator">
+            <div class="display" id="display">3.14159265</div>
+            
+            <button class="solar"></button>
+            <button class="operator">AC</button>
+            <button class="operator">÷</button>
 
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button class="operator">x</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button class="operator">x</button>
 
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button class="operator">-</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button class="operator">-</button>
 
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button class="operator">+</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button class="operator">+</button>
 
-        <button>0</button>
-        <button>.</button>
-        <button class="equal">=</button>
-    </div>
-</div>    
+            <button>0</button>
+            <button>.</button>
+            <button class="equal">=</button>
+        </div>
+    </div>    
 </body>
 </html>
