--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <div class="container">
@@ -13,27 +14,27 @@
             <div class="display" id="display">3.14159265</div>
             
             <button class="solar"></button>
-            <button class="operator">AC</button>
-            <button class="operator">÷</button>
+            <button class="clear" id="clear">AC</button>
+            <button class="operator" id="divide">÷</button>
 
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button class="operator">x</button>
+            <button class="number" id="seven">7</button>
+            <button class="number" id="eight">8</button>
+            <button class="number" id="nine">9</button>
+            <button class="operator" id="multiply">x</button>
 
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button class="operator">-</button>
+            <button class="number" id="four">4</button>
+            <button class="number" id="five">5</button>
+            <button class="number" id="six">6</button>
+            <button class="operator" id="subtract">-</button>
 
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button class="operator">+</button>
+            <button class="number" id="one">1</button>
+            <button class="number" id="two">2</button>
+            <button class="number" id="three">3</button>
+            <button class="operator" id="add">+</button>
 
-            <button>0</button>
-            <button>.</button>
-            <button class="equal">=</button>
+            <button class="number" id="zero">0</button>
+            <button class ="decimal" id="decimal">.</button>
+            <button class="equals" id="equals">=</button>
         </div>
     </div>    
 </body>
