Prepare event delegation and potential polymorphism structuring.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="container">
         <h1 class="title">Calculator</h1>
         <div class="calculator">
-            <div class="display" id="display">3.14159265</div>
+            <div class="display" id="display">8008</div>
             
             <button class="solar"></button>
             <button class="clear" id="clear">AC</button>
