Refactor script and add event delegation.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1 class="title">Calculator</h1>
         <div class="calculator">
-            <div class="display" id="display">8008</div>
+            <div class="display" id="display"></div>
             
             <button class="solar"></button>
             <button class="clear" id="clear">AC</button>
